methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:44: error: ')' expected but '}' found.
  }
  ^